--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "creative",
   "title": "Creative",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/creative",
+  "homepage": "https://github.com/zoosky/template-overviews/creative",
   "author": "Start Bootstrap",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "url": "https://github.com/zoosky/startbootstrap/blob/gh-pages/LICENSE"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
@@ -24,6 +24,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-creative.git"
+    "url": "https://github.com/zoosky/startbootstrap-creative.git"
   }
 }
